<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- This is real ID-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1260562111804726/2944681295</string>
    <!-- This is test ID-->
    <!--string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string!-->
    <string name="app_name">SMS banking</string>
    <string name="SMS_TEXT">SMS TEXT</string>

    <string name="action_rule_list">Rules</string>
    <string name="action_sub_rule_list">Extraction rules</string>
    <string name="action_preferences">Preferences</string>

    <string name="action_quit">Quit</string>
    <string name="action_save">Save</string>
    <string name="action_rule_text">Rule editor</string>
    <string name="action_rate_app">Rate application</string>

    <string name="rule_message">Pick variable words (Long tap to split, Swype to join):</string>

    <string name="popup_create_rule">Create new rule</string>
    <string name="popup_edit_rule">Edit rule</string>
    <string name="popup_delete_rule">Delete rule</string>

    <string name="account_default_currency">Bank account default currency:</string>
    <string name="bank_account_name">Bank account name:</string>
    <string name="sms_bank_sender">SMS senders:</string>
    <string name="rule_type">Transaction type:</string>
    <string name="sub_rule_constant_value">Value:</string>
    <string name="sub_rule_method">Method:</string>
    <string name="sub_rule_phrase">Phrase:</string>
    <string name="sub_rule_result_value">Result:</string>
    <string name="sub_rule_decimal_separator">decimal separator</string>

    <string name="tip_icon">icon</string>
    <string name="tip_type">transaction type</string>
    <string name="tip_rule_name">Rule Name</string>
    <string name="tip_before">before</string>
    <string name="tip_after">after</string>
    <string name="tip_difference">diff</string>
    <string name="tip_commission">commission</string>
    <string name="tip_date">29.02.1981</string>
    <string name="tip_bank_name">Bank name</string>
    <string name="tip_bank_phone">Phone</string>
    <string name="pref_hide_title">Hide currency name.</string>
    <string name="pref_hide_currency_summary">All values in your current bank account currency will not be displayed.</string>
    <string name="pref_inverse_rate">Inverse currency rates</string>
    <string name="pref_inverse_rate_summary">Changes USD/EUR to EUR/USD</string>
    <string name="pref_hide_matched">Hide matched messages.</string>
    <string name="pref_hide_matched_summary">Useful while rule configuration.</string>
    <string name="pref_hide_non_matched">Hide not matched messages.</string>
    <string name="pref_hide_non_matched_summary">Check to hide useless messages.</string>


    <string name="tip_bank_1">Hello, friend!\n
 		First of all you need to setup your \"Bank Account\":\n
        1. In banks menu try to find your bank in templates.\n
		2. If no luck add a new bank.\n
		3. Return to the main window.\n
        \n
		You should see a list of messages from the bank.\n
		Then you will be ready to set up rules.</string>

    <string name="tip_rules_1">
		The most important part is to set up the rules.\n
		To do this you will need:\n
		\n
		1. Go back to messages list\n
		2. One by one pick up the messages from the list.\n
		3. Choose \"Create new rule\" from the popup menu.\n
		4. Pick all the words from the message which will never change in this type of messages. These words will be used later for extracting values.\n
		5. Press \"Next\" button and add extraction rules.\n
		\n
		TIP: You can use card number or bank account number as constant word to split messages between several accounts of the same bank.
	</string>

    <string name="tip_subrules_1">
		For each rule you need to specify a set of sub rules which can be used to extract 5 transaction parameters:\n
		\n
		1. \"Account state before transaction\"\n
		2. \"Account state after transaction\"\n
		3. \"Account state difference\"\n
		4. \"Transaction commission\" (optional)\n
		5. \"Transaction currency\" (optional)\n
		\n
		Note 1: Just 2 of first 3 parameters needed. Third parameter will be calculated automatically.\n
		\n
		Note 2: If just 1 of first 3 parameters is set program will use \"Account state\" from previous or next transaction. Sometimes it leads to wrong calculations if some previous transaction missed.\n
		\n
		Note 3: If \"Transaction currency\" differs from default value set in bank account settings the exchange rate will be calculated. Sometimes it leads to wrong calculations if some previous transaction missed.\n

	</string>

    <string name="saving_changes">Saving changes…</string>
    <string name="pref_title">Common settings</string>
    <string name="popup_delete_sms">Delete message</string>
    <string name="activity_title_bank_list">Bank list</string>
    <string name="activity_title_bank">Bank settings</string>
    <string name="negate">negate</string>

    <string name="bank_activate">Activate</string>
    <string name="mybank_activity_title">My banks</string>
    <string name="bank_add">Add new bank</string>
    <string name="bank_edit">Edit</string>
    <string name="bank_delete">Delete</string>
    <string name="bank_activate_tip">is set active.</string>
    <string name="add_phone_button_description">plus</string>
    <string name="phone_number_not_set">Phone number must be set.</string>
    <string name="export_failed">Export failed</string>
    <string name="appwidget_text">0.00</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_default_name">Bank</string>
    <string name="appwidget_currency">USD</string>
    <string name="bank_share">Share</string>
    <string name="popup_switch_rule">Use another rule</string>
    <string name="warning_sign" translatable="false">(!)</string>
    <string name="extra_parameter">extra1</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background:</string>
    <string name="bank_name">Bank Name</string>
    <string name="font_size">Font size</string>
    <string name="widget_sample_label">My Bank\n123.56 USD</string>
    <string name="background">backgrpound</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="statistics">Statistics</string>
    <string name="quot_interval_quot">Interval:</string>
    <string name="stat_show_balance">Balance curve</string>
    <string name="stat_show_outcome">Outcome</string>
    <string name="stat_show_income">Income</string>
    <string name="stat_show_values">Balance values</string>
    <string name="stats_income">income</string>
    <string name="stats_outcome">outcome</string>
    <string name="stats_balance">balance</string>
    <string name="pref_ignore_clones">Ignore message clones.</string>
    <string name="pref_ignore_clones_summary">Check if you get multiple messages for each transaction..</string>
    <string name="action_privacy">Privacy notice</string>
    <string name="export_to_xls">Export to XLS</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="pick_phone_number">Pick a sender</string>
    <string name="Ignore">Ignore</string>
    <string name="left_characters_and">left characters and</string>
    <string name="right">right</string>
    <string name="bank_name_must_be_set">Bank name must be set.</string>
    <string name="action_help">Help</string>
    <string name="now_customize_transaction_details">Now customize transaction details</string>
    <string name="state_after_transaction">State after transaction:</string>
    <string name="transaction_value">Transaction value:</string>
    <string name="transaction_currency">Transaction currency:</string>
    <string name="bank_commission">Bank commission:</string>
    <string name="state_before_transaction">State before transaction:</string>
    <string name="extra1">Extra1:</string>
    <string name="extra2">Extra2:</string>
    <string name="extra3">Extra3:</string>
    <string name="n_a">N/A</string>
    <string name="extra4">Extra4:</string>
    <string name="transaction_editor">Transaction editor</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_transactions">Cache transactions</string>
    <string name="cache_needed">Cache transactions for better performance</string>
    <string name="cache_deleted">Cache deleted successfully</string>
    <string name="reading_messages">Reading messages …</string>
    <string name="go_to_banks">Nothing to export jet.</string>
    <string name="nothing_to_cache">Nothing to cache jet.</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="commission_tip">Use positive values for bank commission.</string>
    <string name="load_template">Load Template</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="default_client_id" translatable="false">338602878108-p887iq5e2orf4up4jo3qgdiiqis34212.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_posts">My Banks</string>
    <string name="country">Country:</string>
    <string name="write_comment">Write a comment…</string>
    <string name="login_first">Login first.</string>
    <string name="begin" translatable="false"><![CDATA[<BEGIN>]]></string>
    <string name="end" translatable="false"><![CDATA[<END>]]></string>
    <string name="download_success">download_success</string>
    <string name="download_failure">download_failure</string>
    <string name="comments">Comments</string>
    <string name="your_country">Country</string>
     <string name="about">About</string>
    <string name="replace_private">Replace you private data here if you wish to share template later.</string>
    <string name="pick_your_country">Pick your country</string>
    <string name="pref_lang">Language</string>
    <string name="about_text">Автор Andrey Khizhny</string>
    <string name="split">Split</string>
    <string name="variable_size_fixed">variable(size fixed)</string>
    <string name="word_variable">variable</string>
    <string name="word_fixed">fixed</string>
    <string name="delete_sub_rule">Delete sub rule</string>
    <string name="advanced">Advanced</string>
    <string name="regular_expression">Regular Expression</string>
    <string name="image" translatable="false">image</string>
    <string name="sd_card_msg">Starting from Android 6.0 you need to allow access to SD</string>
    <string name="message">message</string>
    <string name="extra_parameters">Extra parameters</string>
    <string name="define_extra_parameter1">Card/Account</string>
    <string name="define_extra_parameter2">Place</string>
    <string name="define_extra_parameter3">Date</string>
    <string name="define_extra_parameter4">Time</string>
    <string name="system_language">System language</string>
    <string name="edit_message">Fix Time</string>
    <string name="impersonalize">Impersonalize</string>
    <string name="anonymouse" translatable="false">Anonymous</string>
    <string name="crash_mail_subject" translatable="false">SMS banking crash report</string>
    <string name="ic_icon_minus" translatable="false">ic_icon_minus</string>
    <string name="sub_rule_save" translatable="false">sub_rule_save</string>
    <string name="button_post_comment" translatable="false">button_post_comment</string>
    <string name="rule_next" translatable="false">rule_next</string>
    <string name="remove_personal_info">Would you like to remove all personal information (if any) before share?</string>
    <string name="caching">Caching</string>

</resources>

