<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
        android:title="@string/pref_title">
		<ListPreference
			android:entries="@array/countries_array"
			android:entryValues="@array/countries_array"
			android:key="country_preference"
			android:summary="%s"
			android:title="@string/your_country">
		</ListPreference>
		<ListPreference
			android:entries="@array/language_array"
			android:entryValues="@array/language_array"
			android:key="language"
			android:summary="%s"
			android:title="@string/pref_lang">
		</ListPreference>
        <CheckBoxPreference
			 	android:key="hide_matched_messages"
			 	android:title="@string/pref_hide_matched"
			 	android:summary="@string/pref_hide_matched_summary">
		</CheckBoxPreference>
        <CheckBoxPreference
			 	android:key="hide_not_matched_messages"
			 	android:title="@string/pref_hide_non_matched"
			 	android:summary="@string/pref_hide_non_matched_summary">
		</CheckBoxPreference>
        <CheckBoxPreference
			 	android:key="hide_currency"
			 	android:title="@string/pref_hide_title"
			 	android:summary="@string/pref_hide_currency_summary">
		</CheckBoxPreference>
        <CheckBoxPreference
			 	android:key="inverse_rate"
			 	android:title="@string/pref_inverse_rate"
			 	android:summary="@string/pref_inverse_rate_summary">
		</CheckBoxPreference>
        <CheckBoxPreference
            android:key="ignore_clones"
            android:title="@string/pref_ignore_clones"
            android:summary="@string/pref_ignore_clones_summary">
        </CheckBoxPreference>
		</PreferenceCategory>
    <PreferenceCategory android:title="@string/extra_parameters">
        <EditTextPreference
            android:key="extra1_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="%s"
            android:title="@string/extra1" />
        <EditTextPreference
            android:key="extra2_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="%s"
            android:title="@string/extra2" />
        <EditTextPreference
            android:key="extra3_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="%s"
            android:title="@string/extra3" />
        <EditTextPreference
            android:key="extra4_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="%s"
            android:title="@string/extra4" />
    </PreferenceCategory>

</PreferenceScreen>