<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/item_new_rule"
        android:title="@string/popup_create_rule"
        android:visible="true"/>
    <item
        android:id="@+id/item_delete_sms"
        android:title="@string/popup_delete_sms"
        android:visible="true"/>
    <item
        android:id="@+id/item_edit_sms"
        android:title="@string/edit_message"
        android:visible="true"/>
    <item
        android:id="@+id/item_switch_rule"
        android:title="@string/popup_switch_rule"
        android:visible="true"/>
    <item
        android:id="@+id/item_edit_rule"
        android:title="@string/popup_edit_rule"
        android:visible="true"/>
    <item
        android:id="@+id/item_delete_rule"
        android:title="@string/popup_delete_rule"
        android:visible="true"/>
</menu>