<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.khizhny.smsbanking.MainActivity" >
    <item
        android:id="@+id/action_bank_my_list"
        android:orderInCategory="103"
        android:title="@string/mybank_activity_title"
        android:icon="@drawable/ic_menu_banks"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="104"
        android:icon="@drawable/ic_menu_statistics"
        android:title="@string/statistics"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_rule_list"
        android:orderInCategory="105"
        android:title="@string/action_rule_list"
        android:icon="@drawable/ic_menu_list_rules"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_export_transactions"
        android:orderInCategory="106"
        android:title="@string/export_to_xls"
        android:icon="@drawable/ic_menu_export_to_excel"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_quit"
        android:orderInCategory="107"
        android:title="@string/action_quit"
        android:icon="@drawable/ic_action_exit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="108"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/action_preferences"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="109"
        android:title="@string/action_rate_app"
        android:icon="@drawable/ic_menu_rate_app"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_cache"
        android:orderInCategory="110"
        android:title="@string/cache_transactions"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bank_clear_cache"
        android:title="@string/clear_cache"
        android:visible="true"/>
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="111"
        android:title="@string/action_privacy"
        app:showAsAction="never"/>
</menu>
