<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout

        android:id="@+id/relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/transanction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_date"
            android:gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/transanctionIcon"
            android:contentDescription="@string/tip_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_transanction_unknown"
            android:layout_below="@+id/transanction_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/warning_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/warning_sign"
            android:textSize="14sp"
            android:layout_alignBottom="@+id/transanctionIcon"
            android:layout_toRightOf="@+id/transanctionIcon"
            android:layout_toLeftOf="@+id/linearLayout"
            android:layout_toStartOf="@+id/linearLayout"
            android:layout_below="@+id/transanction_date"
            android:gravity="center"
            android:textColor="#ff0000"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:layout_toRightOf="@+id/transanction_date"
            android:layout_toEndOf="@+id/transanction_date"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/stateAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:gravity="top|end"
                android:text="@string/tip_after"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/stateDifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:gravity="end|center"
                android:textStyle="bold"
                android:text="@string/tip_difference"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/transactionComission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:gravity="end|center"
                android:textStyle="bold"
                android:text="@string/tip_commission"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/stateBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:gravity="bottom|end"
                android:text="@string/tip_before"
                android:textSize="9sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/smsBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/SMS_TEXT"
            android:textSize="9sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_toEndOf="@+id/linearLayout"
            android:paddingRight="5dp"
            android:layout_marginLeft="5sp" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extras_ll">

        <TextView
            android:id="@+id/extra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_parameter"
            android:textSize="10sp"
            android:gravity="left|center"
            android:textColor="#ff0000"
            android:layout_weight="1"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/extra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_parameter"
            android:textSize="10sp"
            android:gravity="center"
            android:textColor="#04ac04"
            android:layout_weight="1"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/extra3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_parameter"
            android:textSize="10sp"
            android:gravity="center"
            android:textColor="#0000ff"
            android:layout_weight="1"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/extra4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_parameter"
            android:textSize="10sp"
            android:gravity="center|right"
            android:textColor="#ff00ff"
            android:layout_weight="1"
            android:layout_gravity="top"/>

    </LinearLayout>

</LinearLayout>