<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_name"
        android:id="@+id/textView3"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_bank"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/my_bank"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/font_size"/>

    <SeekBar
        android:id="@+id/font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="8dp"
        android:max="40"
        android:progress="12"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font_size"
        android:layout_marginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_color"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/background_color"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.khizhny.smsbanking.ColorPickerView
                android:id="@+id/text_color"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:alpha="1"/>

            <com.khizhny.smsbanking.ColorPickerView
                android:id="@+id/text_background"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/widget_sample_background"
        android:layout_alignTop="@+id/widget_sample"
        android:layout_alignBottom="@+id/widget_sample"
        android:layout_alignLeft="@+id/widget_sample"
        android:layout_alignRight="@+id/widget_sample"
        android:src="@drawable/layout_bg"
        android:contentDescription="@string/background"
        android:contextClickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/widget_sample_label"
        android:id="@+id/widget_sample"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:padding="8dp"/>
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_widget"
        android:layout_below="@+id/widget_sample"
        android:layout_centerHorizontal="true" />

</RelativeLayout>